--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -1,4 +1,4 @@
-html, body { height: 100% }
+html, body { height: 100vh }
 #root {
     display: flex;
     flex-direction: column;
@@ -6,5 +6,7 @@ html, body { height: 100% }
 }
 
 #app {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
