Update form fields

--- a/packages/application/src/App.css
+++ b/packages/application/src/App.css
@@ -10,3 +10,8 @@ html, body { height: 100vh }
     flex-direction: column;
     flex-grow: 1;
 }
+
+.MuiButtonBase-root.MuiIconButton-root.MuiPickersDay-day,
+.MuiPickersCalendarHeader-switchHeader {
+  color: black;
+}
