--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -21,3 +21,18 @@ html, body { height: 100vh }
   opacity: 0.9;
   line-height: 0px;
 }
+
+.leaflet-popup-content-wrapper {
+  border-radius: 4px;
+  padding: 0px;
+}
+
+.leaflet-popup-content {
+  border-radius: 4px;
+  margin: 0px;
+}
+
+.leaflet-popup-tip {
+  height: 12px;
+  width: 12px;
+}
