Add all new survey form fields

--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -48,3 +48,13 @@ html, body { height: 100vh }
 .marker-icon {
   background-color: transparent;
 }
+
+.MuiButtonBase-root.MuiIconButton-root.MuiPickersDay-day,
+.MuiPickersCalendarHeader-switchHeader {
+  color: black;
+}
+
+.MuiTypography-root.MuiPickersClockNumber-clockNumber.MuiTypography-body1 {
+  color: black;
+}
+
