--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -1,4 +1,8 @@
-html, body { height: 100vh }
+html, body { 
+  height: 100%;
+  min-height: 100%; 
+}
+
 #root {
     display: flex;
     flex-direction: column;
