Refactor carousels using `react-slick` package

--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -62,3 +62,23 @@ html, body {
   color: black;
 }
 
+.slick-arrow:hover {
+  background-color: rgba(22, 141, 189, 0.5);
+  border-radius: 40px;
+}
+
+.slick-arrow.slick-prev {
+  background-color: rgba(22, 141, 189, 0.5);
+  border-radius: 40px;
+  height: 40px;
+  width: 40px;
+  left: -45px;
+}
+
+.slick-arrow.slick-next {
+  background-color: rgba(22, 141, 189, 0.5);
+  border-radius: 40px;
+  height: 40px;
+  width: 40px;
+  right: -45px;
+}
