--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -1,18 +1,23 @@
-html, body { 
+html,
+body {
   height: 100%;
-  min-height: 100%; 
+  min-height: 100%;
 }
 
 #root {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 #app {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+#mapid {
+  height: 180px;
 }
 
 .tooltip-arrow {
