--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -58,6 +58,10 @@ body {
   background-color: transparent;
 }
 
+.custom-cluster-icon {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
 .slick-arrow:hover {
   background-color: rgba(22, 141, 189, 0.5);
   border-radius: 40px;
