--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -112,3 +112,17 @@ body {
     bottom: 55px;
   }
 }
+
+/* Hide input type "number" increase/decrease arrows */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
