Add points on reef details map simple popup

--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -136,6 +136,14 @@ input[type=number] {
   align-items: center;
 }
 
+.leaflet-selected-numbered-marker {
+  background-image: url(../../assets/alerts/pin_warning.png);
+  background-size: 100% 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .leaflet-numbered-marker-text {
   color: black;
   font-weight: 700;
