--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -63,6 +63,7 @@ body {
   background-color: rgba(255, 255, 255, 0.4);
 }
 
+/* Change defauly react-slick arrows */
 .slick-arrow:hover {
   border-radius: 40px;
 }
