--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -125,6 +125,29 @@ body {
   }
 }
 
+.homepage-map-spotter-icon-blinking {
+  animation: pulse 1s infinite;
+  transform: scale(1);
+  border-radius: 50%;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+
+  100% {
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+
 /* Hide input type "number" increase/decrease arrows */
 
 /* Chrome, Safari, Edge, Opera */
