Animate marker based on shape

--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -125,27 +125,30 @@ body {
   }
 }
 
+.homepage-map-hobo-icon {
+  height: inherit;
+  width: inherit;
+}
+
+.homepage-map-spotter-icon-steady {
+  height: inherit;
+  width: inherit;
+  position: relative;
+  left: 0;
+  right: 0;
+  top: -100%;
+}
+
 .homepage-map-spotter-icon-blinking {
-  animation: pulse 1.5s infinite;
-  transform: scale(1);
-  border-radius: 50%;
+  width: inherit;
+  height: inherit;
+  animation: pulse 2s infinite;
 }
 
 @keyframes pulse {
-  0% {
-    transform: scale(0.9);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
-  }
-
-  100% {
-    transform: scale(0.9);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
+  0% { stroke-opacity: 1; }
+  50% { stroke-opacity: 1; transform: scale(1); }
+  100% { stroke-opacity: 0; transform: scale(3); }
 }
 
 /* Hide input type "number" increase/decrease arrows */
