--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -125,6 +125,18 @@ body {
   }
 }
 
+@keyframes pulse {
+  0%  { stroke-opacity: 1; }
+  50% { stroke-opacity: 1; transform: scale(1); }
+  100% { stroke-opacity: 0; transform: scale(3); }
+}
+
+@-webkit-keyframes pulse {
+  0%  { stroke-opacity: 1; }
+  50% { stroke-opacity: 1; transform: scale(1); }
+  100% { stroke-opacity: 0; transform: scale(3); }
+}
+
 /* Hide input type "number" increase/decrease arrows */
 
 /* Chrome, Safari, Edge, Opera */
