--- a/packages/website/src/layout/App/App.css
+++ b/packages/website/src/layout/App/App.css
@@ -126,15 +126,15 @@ body {
 }
 
 @keyframes pulse {
-  0%  { stroke-opacity: 1; }
-  50% { stroke-opacity: 1; transform: scale(1); }
-  100% { stroke-opacity: 0; transform: scale(3); }
+  0%  { opacity: 1; }
+  50% { opacity: 1; transform: scale(1); }
+  100% { opacity: 0; transform: scale(3); }
 }
 
 @-webkit-keyframes pulse {
-  0%  { stroke-opacity: 1; }
-  50% { stroke-opacity: 1; transform: scale(1); }
-  100% { stroke-opacity: 0; transform: scale(3); }
+  0%  { opacity: 1; }
+  50% { opacity: 1; transform: scale(1); }
+  100% { opacity: 0; transform: scale(3); }
 }
 
 /* Hide input type "number" increase/decrease arrows */
