Update icons, force map update on resize

--- a/packages/website/src/index.css
+++ b/packages/website/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.leaflet-control-layers-toggle {
+  height: 32px !important;
+  width: 32px !important;
+}
